# Basic-Web-Scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  scraper_core.py  scraper_shell.py
web_scraper_cli/file/file_reader/: file_reader.py  utils.py
web_scraper_cli/shell/: scraper_shell.py
